# mlserving

./: .flake8  .gitignore  CHANGELOG.md  CNAME  LICENSE.md  Makefile  README.md  _config.yml  app.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: package-build.yml  package-release.yml  pythonpackage-dev.yml  pythonpackage.yml  pythonpublish.yml
advanced/: README.md  webframeworks.md
docs/: README.md  index.md
docs/source/: conf.py  health-check.md  index.rst  install.md  predictors.md  running-in-prod.md  serving-models.md  tf-serving.md  web-frameworks.md
examples/: sample_app.py  tf_serving.py
ganesha/app/: __init__.py  ganesha_app.py  ganesha_conf.py
ganesha/cli/: __init__.py  _common.py  run.py  shell.py  test.py
ganesha/models/: _base.py
ganesha/utils/: __init__.py  _singleton.py
getting-started/: README.md  predictors.md  running-in-prod.md  serving-models.md
jarvis/app/: __init__.py  _state.py  jarvis_app.py  jarvis_conf.py
jarvis/cli/: __init__.py  _common.py  run.py  shell.py  test.py
jarvis/models/: __init__.py  _base.py
mest/: __init__.py  _mest.py
mlserving/: __init__.py  _serving_app.py
samples/: custom_cli.py  sample_app.py  sample_app_new.py
serving-models/: README.md
servingmodels/: getting-started.md
tests/: common.py  complex_model.py  complex_predictor.py  error_model.py  error_predictor.py  test_api_v1.py  test_app.py  test_model.py  test_pipeline_predictor.py  test_predictor.py  test_router.py  test_tf_serving_prediction.py  test_utils.py
(+77 files in other folders)
