[metadata]
name = mlserving
url = https://github.com/orlevii/mlserving
project_urls =
    Documentation = https://mlserving.readthedocs.io/en/latest/
    Code = https://github.com/orlevii/mlserving
license = MIT
author = Or Levi
author_email = orlevi128@gmail.com
maintainer = Or Levi
maintainer_email = orlevi128@gmail.com
description = 'A framework for developing a realtime model-inference service.'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Module

[egg_info]
tag_build =

[options]
python_requires = >= 3.6
packages = find:

[options.packages.find]
exclude =
    tests*
    examples*

[coverage:run]
source =
    mlserving

[flake8]
exclude =
    .git
    __pycache__
    venv
max-line-length = 120
statistics = 1
builtins =
    __version__
